@@ -53,6 +53,7 @@ https://weechat.org/files/releasenotes/ReleaseNotes-devel.html[release notes]
 * relay: display the arrow before client id and protocol in raw buffer
 * ruby: fix load of scripts requiring "uri" (issue #433)
 * ruby: fix Ruby detection when pkg-config is not installed
+* trigger: only return trigger's return code when condition evaluates to true
 
 == Version 1.3 (2015-08-16)
 
